--- a/mystyles.css
+++ b/mystyles.css
@@ -23,6 +23,18 @@ html, body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+}
+
+h2{
+    font-weight: bold;
+    font-size: 50px;
+    text-transform: uppercase;
+}
+h3 {
+    font-weight: bold;
+    font-size: 40px;
+    color: #CCCCCC;
 }
 
 .cookie{
